--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: CI/CD Pipeline
 
+
+permissions:
+  contents: read
+  pull-requests: read
+  checks: write
+
 on:
   push:
     branches: [ main, develop ]
